[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-dynamics"
version = "0.1.1"
description = "Time-Resolved Ensemble Generator using Coarse-Grained ENM Langevin Dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "George Elkins"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["molecular-dynamics", "protein-dynamics", "ANM", "Langevin", "ensemble-generation"]

dependencies = [
    "numpy<2.0.0",
    "MDAnalysis",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/elkins/synth-dynamics"
Repository = "https://github.com/elkins/synth-dynamics"
Documentation = "https://elkins.github.io/synth-dynamics/"
"Bug Tracker" = "https://github.com/elkins/synth-dynamics/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["synth_dynamics*"]

# ── Test runner ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ── Linter & formatter ────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line length handled by formatter
    "N806",  # uppercase variables in functions (scientific constants)
    "N803",  # uppercase arguments
    "N802",  # uppercase function names
    "B017",  # asserting on Exception
    "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional
"tests/*" = ["N", "B"]   # naming/bugbear not enforced in tests

[tool.ruff.lint.isort]
known-first-party = ["synth_dynamics"]

# ── Type checker ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
exclude = ["build/", "dist/", "scratch/", "site/"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "examples.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "MDAnalysis.*",
]
ignore_missing_imports = true

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
